<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/playerFragment"
        android:icon="@drawable/ic_baseline_play_circle_outline_24"
        android:title="@string/menu_player" />

    <item
        android:id="@+id/firebaseFragment"
        android:icon="@drawable/ic_baseline_local_fire_department_24"
        android:title="@string/menu_firebase" />

    <item
        android:id="@+id/downloadFragment"
        android:icon="@drawable/ic_baseline_arrow_downward_24"
        android:title="@string/menu_download" />

</menu>